--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
     "angular-ui-router": "^0.2.18",
-    "angular-dragdrop": "^1.0.13"
+    "angular-dragdrop": "^1.0.13",
+    "angular-ui-sortable": "^0.14.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
