--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "angular-ui-router": "^0.2.18",
     "angular-dragdrop": "^1.0.13",
     "angular-ui-sortable": "^0.14.0",
-	"ng-websocket": "^0.2.1"
+	  "ng-websocket": "^0.2.1",
+    "angular-utils-pagination": "^0.11.1" 
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
