--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,8 @@
     "angular-ui-router": "^0.2.18",
     "angular-dragdrop": "^1.0.13",
     "angular-ui-sortable": "^0.14.0",
+    "angular-bootstrap": "^1.3.2",
+    "angular-ui-bootstrap-bower": "^0.13.4",
 	  "ng-websocket": "^0.2.1",
     "angular-utils-pagination": "^0.11.1" 
   },
