--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "angular-bootstrap": "^1.3.2",
     "angular-ui-bootstrap-bower": "^0.13.4",
     "ng-websocket": "^0.2.1",
-    "angular-utils-pagination": "^0.11.1" 
+    "angular-utils-pagination": "^0.11.1",
+    "angular-scroll-animate": "^0.9.8"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
