--- a/bower.json
+++ b/bower.json
@@ -2,10 +2,10 @@
   "name": "bitleague-client",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "^1.5.6",
+    "angular": "~1.5.6",
     "bootstrap-sass-official": "^3.2.0",
     "angular-animate": "^1.3.0",
-    "angular-cookies": "^1.5.6",
+    "angular-cookies": "~1.5.6",
     "angular-resource": "^1.3.0",
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
