--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "angular-ui-bootstrap-bower": "^0.13.4",
     "ng-websocket": "^0.2.1",
     "angular-utils-pagination": "^0.11.1",
-    "angular-scroll-animate": "^0.9.8"
+    "angular-scroll-animate": "^0.9.8",
+    "AngularJS-Toaster": "angularjs-toaster#^2.0.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
@@ -25,6 +26,6 @@
   "appPath": "app",
   "moduleName": "bitleagueClientApp",
   "resolutions": {
-    "angular": "^1.3.0"
+    "angular": "~1.5.6"
   }
 }
